etc/Makefile: Better handle removal of /var/db/entropy as a file.
Move it to the place where other such cases are handled.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -132,9 +132,6 @@ preupgrade:
 		pw -V ${DESTDIR}/etc groupadd _sdpd -g 70
 	(pw -V ${DESTDIR}/etc groupshow _dhcp -q > /dev/null) || \
 		pw -V ${DESTDIR}/etc groupadd _dhcp -g 77
-	# make sure /var/db/entropy is not a file (mtree will make it
-	# as a directory)
-	-([ -f ${DESTDIR}/var/db/entropy ] && rm -f ${DESTDIR}/var/db/entropy)
 
 upgrade_check:
 	@if [ -n "`grep '^sendmail.*/usr/libexec/sendmail/sendmail' ${DESTDIR}/etc/mail/mailer.conf`" ]; then \
@@ -150,7 +147,7 @@ upgrade_check:
 
 upgrade_base:	upgrade_check preupgrade remove-obsolete-files
 	# files that should be dirs (not possible with Makefile_upgrade.inc)
-.for f in usr/include/dev/misc/ppi usr/share/initrd/sbin
+.for f in usr/include/dev/misc/ppi usr/share/initrd/sbin var/db/entropy
 	[ -d ${DESTDIR}/${f} ] || rm -f ${DESTDIR}/${f}
 .endfor
 .if !defined(BINARY_UPGRADE) # binary upgrade just copies these files
