sbin/*_hammer2: Fix/cleanup Makefile

--- a/sbin/mount_hammer2/Makefile
+++ b/sbin/mount_hammer2/Makefile
@@ -1,7 +1,7 @@
 PROG=	mount_hammer2
 MAN=	mount_hammer2.8
 
-CFLAGS+= -I${.CURDIR}/..
+CFLAGS+= -I${.CURDIR}/../../sys
 CFLAGS+= -I${.CURDIR}/../../crypto/libressl/include
 LDADD=  -lutil
 DPADD=  ${LIBUTIL}
