--- a/usr.bin/env/Makefile
+++ b/usr.bin/env/Makefile
@@ -1,8 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: src/usr.bin/env/Makefile,v 1.2.6.1 2001/08/02 02:25:58 obrien Exp $
-# $DragonFly: src/usr.bin/env/Makefile,v 1.4 2007/08/27 16:50:53 pavalos Exp $
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
 
 PROG=	env
-NOMAN=	noman
+SRCS=	env.c envopts.c
 
 .include <bsd.prog.mk>
