env(1)/printenv(1): Bump .Dd, remove (void) casts.

--- a/usr.bin/env/Makefile
+++ b/usr.bin/env/Makefile
@@ -1,4 +1,5 @@
 #	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: head/usr.bin/env/Makefile 201386 2010-01-02 10:27:05Z ed $
 
 PROG=	env
 SRCS=	env.c envopts.c
