--- a/usr.bin/printenv/Makefile
+++ b/usr.bin/printenv/Makefile
@@ -1,4 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: head/usr.bin/printenv/Makefile 115603 2003-06-01 06:29:47Z tjr $
 
 PROG=	printenv
 
