dsynth - Fleshout functions
* Add dynamic MaxWorker reduction based on the load.  The number of
  workers will be reduced by (load * 2 / ncpus) when the load
  exceeds (ncpus * 2.0), with a floor of min(4, MaxWorkers).

  The idea here is to reduce unnecessary swap use when building
  larger packages that push the load up greatly.

* Clean-up terminal spam after ncurses has been turned on.

* Generate fatal error if required configured directories are
  missing.

* Add -y (yes to all) option.

* Implement 'status' and 'status-everything'

* Implement 'purge-distfiles' (initial work)

* In scans that dump percentages, print 100% at the end before
  moving onto the next step.

--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -2,7 +2,8 @@
 #
 
 PROG=	dsynth
-SRCS=	dsynth.c subs.c pkglist.c config.c bulk.c build.c repo.c mount.c gui.c
+SRCS=	dsynth.c subs.c pkglist.c config.c bulk.c build.c repo.c mount.c
+SRCS+=	status.c gui.c
 NOMAN=true
 
 SCRIPTS=mktemplate.sh
