--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -3,7 +3,8 @@
 
 PROG=	dsynth
 SRCS=	dsynth.c subs.c pkglist.c config.c bulk.c build.c repo.c mount.c
-SRCS+=	status.c gui.c
+SRCS+=	status.c
+SRCS+=	runstats.c ncurses.c monitor.c html.c
 
 SCRIPTS=mktemplate.sh
 SCRIPTSDIR= ${SHAREDIR}/dsynth
