drm: Enable drm_pcie_get_max_link_width()
Partially obtained from FreeBSD.

--- a/sys/dev/video/vga/Makefile
+++ b/sys/dev/video/vga/Makefile
@@ -3,5 +3,6 @@ SRCS=	vga_switcheroo.c
 SRCS+=	device_if.h bus_if.h pci_if.h
 
 KCFLAGS+= -I${SYSDIR}/dev/drm/include
+KCFLAGS+= -I${SYSDIR}/dev/drm/include/uapi
 
 .include <bsd.kmod.mk>
