--- a/contrib/dhcpcd/hooks/50-ntp.conf
+++ b/contrib/dhcpcd/hooks/50-ntp.conf
@@ -62,6 +62,7 @@ build_ntp_conf()
 	# Build a list of interfaces
 	interfaces=$(list_interfaces "$ntp_conf_dir")
 
+	header=
 	servers=
 	if [ -n "$interfaces" ]; then
 		# Build the header
@@ -96,7 +97,7 @@ build_ntp_conf()
 		printf %s "$servers" >> "$cf"
 		echo "$signature_base_end${header:+ $from }$header" >> "$cf"
 	else
-		[ -e "$ntp_conf" -a -e "$cf" ] || return
+		[ -e "$ntp_conf" ] && [ -e "$cf" ] || return
 	fi
 
 	# If we changed anything, restart ntpd
