--- a/contrib/dhcpcd/src/dhcpcd.8.in
+++ b/contrib/dhcpcd/src/dhcpcd.8.in
@@ -1,4 +1,6 @@
-.\" Copyright (c) 2006-2018 Roy Marples
+.\" SPDX-License-Identifier: BSD-2-Clause
+.\"
+.\" Copyright (c) 2006-2019 Roy Marples
 .\" All rights reserved
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -22,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 5, 2018
+.Dd August 28, 2019
 .Dt DHCPCD 8
 .Os
 .Sh NAME
@@ -54,7 +56,7 @@
 .Op Fl v , Fl Fl vendor Ar code , Ar value
 .Op Fl W , Fl Fl whitelist Ar address Ns Op Ar /cidr
 .Op Fl w
-.Op Fl Fl waitip Op 4 | 6
+.Op Fl Fl waitip Ns = Ns Op 4 | 6
 .Op Fl y , Fl Fl reboot Ar seconds
 .Op Fl X , Fl Fl blacklist Ar address Ns Op Ar /cidr
 .Op Fl Z , Fl Fl denyinterfaces Ar pattern
@@ -69,7 +71,7 @@
 .Fl k , Fl Fl release
 .Op interface
 .Nm
-.Fl U, Fl Fl dumplease
+.Fl U , Fl Fl dumplease
 .Ar interface
 .Nm
 .Fl Fl version
@@ -102,7 +104,7 @@ sets the hostname to the one supplied by the DHCP server.
 .Nm
 then daemonises and waits for the lease renewal time to lapse.
 It will then attempt to renew its lease and reconfigure if the new lease
-changes when the lease beings to expire or the DHCP server sends message
+changes when the lease begins to expire or the DHCP server sends a message
 to renew early.
 .Pp
 If any interface reports a working carrier then
@@ -187,8 +189,8 @@ Using a single interface also affects the
 .Fl n
 and
 .Fl x
-options where the same interface will need to be specified as a lack of an
-interafce will imply Master mode which this is not.
+options, where the same interface will need to be specified, as a lack of an
+interface will imply Master mode which this is not.
 To force starting in Master mode with only one interface, the
 .Fl M , Fl Fl master
 option can be used.
@@ -232,12 +234,11 @@ and need to be copied to
 .Pa @HOOKDIR@
 if you intend to use them.
 For example, you could install
-.Pa 10-wpa_supplicant
+.Pa 29-lookup-hostname
 so that
 .Nm
-can ensure that
-.Xr wpa_supplicant 8
-is always running on a hot-plugged wireless interface.
+can lookup the hostname of the IP address in DNS if no hostname
+is given by the lease and one is not already set.
 .Ss Fine tuning
 You can fine-tune the behaviour of
 .Nm
@@ -259,7 +260,7 @@ otheriwse if persistent storage is available then a DUID-LLT
 (link local address + time) is generated,
 otherwise DUID-LL is generated (link local address).
 This, plus the IAID will be used as the
-.Fl I, Fl Fl clientid .
+.Fl I , Fl Fl clientid .
 The DUID generated will be held in
 .Pa @DBDIR@/duid
 and should not be copied to other hosts.
@@ -272,10 +273,10 @@ If
 cannot obtain a lease, then try to use the last lease acquired for the
 interface.
 .It Fl Fl lastleaseextend
-Same as the above, but he lease will be retained even if it expires.
+Same as the above, but the lease will be retained even if it expires.
 .Nm
 will give it up if any other host tries to claim it for their own via ARP.
-This is does violate RFC2131 section 3.7 which states the lease should be
+This violates RFC 2131, section 3.7, which states the lease should be
 dropped once it has expired.
 .It Fl e , Fl Fl env Ar value
 Push
@@ -307,7 +308,7 @@ are disable, none, ptr and both.
 itself never does any DNS updates.
 .Nm
 encodes the FQDN hostname as specified in
-.Li RFC1035 .
+.Li RFC 1035 .
 .It Fl f , Fl Fl config Ar file
 Specify a config to load instead of
 .Pa @SYSCONFDIR@/dhcpcd.conf .
@@ -322,7 +323,7 @@ If
 is an empty string then the current system hostname is sent.
 If
 .Ar hostname
-is a FQDN (ie, contains a .) then it will be encoded as such.
+is a FQDN (i.e., contains a .) then it will be encoded as such.
 .It Fl I , Fl Fl clientid Ar clientid
 Send the
 .Ar clientid .
@@ -352,7 +353,7 @@ rather than
 .Xr syslog 3 .
 The
 .Ar logfile
-is s reopened when
+is reopened when
 .Nm
 receives the
 .Dv SIGUSR2
@@ -402,10 +403,6 @@ is specified then this applies to all interfaces in Master mode.
 If
 .Nm
 is not running, then it starts up as normal.
-This may also cause
-.Xr wpa_supplicant 8
-to reload its configuration for each interface as well if the
-relevant hook script has been installed.
 .It Fl N , Fl Fl renew Op Ar interface
 Notifies
 .Nm
@@ -473,7 +470,7 @@ This option is only needed when
 .Nm
 is not processing IPv6RA messages and the need for DHCPv6 Information Request
 exists.
-.It Fl S, Fl Fl static Ar value
+.It Fl S , Fl Fl static Ar value
 Configures a static DHCP
 .Ar value .
 If you set
@@ -483,7 +480,7 @@ then
 will not attempt to obtain a lease and just use the value for the address with
 an infinite lease time.
 .Pp
-Here is an example which configures a static address, routes and dns.
+Here is an example which configures a static address, routes and DNS.
 .D1 dhcpcd -S ip_address=192.168.0.10/24 \e
 .D1 -S routers=192.168.0.1 \e
 .D1 -S domain_name_servers=192.168.0.1 \e
@@ -538,7 +535,7 @@ then exits before doing any configuration.
 .It Fl w
 Wait for an address to be assigned before forking to the background.
 Does not take an argument, unlike the below option.
-.It Fl Fl waitip Op 4 | 6
+.It Fl Fl waitip Ns = Ns Op 4 | 6
 Wait for an address to be assigned before forking to the background.
 4 means wait for an IPv4 address to be assigned.
 6 means wait for an IPv6 address to be assigned.
@@ -584,7 +581,7 @@ This has no effect on DHCPv6 other than skipping the reboot phase.
 .Nm
 will try to do as much as it can by default.
 However, there are sometimes situations where you don't want the things to be
-configured exactly how the the DHCP server wants.
+configured exactly how the DHCP server wants.
 Here are some options that deal with turning these bits off.
 .Pp
 Note that when
@@ -628,7 +625,7 @@ Use the last four bytes of the hardware address as the DHCP xid instead
 of a randomly generated number.
 .It Fl J , Fl Fl broadcast
 Instructs the DHCP server to broadcast replies back to the client.
-Normally this is only set for non Ethernet interfaces,
+Normally this is only set for non-Ethernet interfaces,
 such as FireWire and InfiniBand.
 In most instances,
 .Nm
@@ -663,7 +660,7 @@ Quiet
 .Nm
 on the command line, only warnings and errors will be displayed.
 The messages are still logged though.
-.It Fl T, Fl Fl test
+.It Fl T , Fl Fl test
 On receipt of DHCP messages just call
 .Pa @SCRIPT@
 with the reason of TEST which echos the DHCP variables found in the message
@@ -676,7 +673,7 @@ option is not sent in TEST mode so that the server does not lease an address.
 To test INFORM the interface needs to be configured with the desired address
 before starting
 .Nm .
-.It Fl U, Fl Fl dumplease Ar interface
+.It Fl U , Fl Fl dumplease Ar interface
 Dumps the last lease for the
 .Ar interface
 to stdout.
@@ -686,20 +683,20 @@ Use the
 or
 .Fl 6
 flags to specify an address family.
-.It Fl V, Fl Fl variables
+.It Fl V , Fl Fl variables
 Display a list of option codes, the associated variable and encoding for use in
 .Xr dhcpcd-run-hooks 8 .
 Variables are prefixed with new_ and old_ unless the option number is -.
 Variables without an option are part of the DHCP message and cannot be
 directly requested.
-.It Fl W, Fl Fl whitelist Ar address Ns Op /cidr
+.It Fl W , Fl Fl whitelist Ar address Ns Op /cidr
 Only accept packets from
 .Ar address Ns Op /cidr .
-.Fl X, Fl Fl blacklist
+.Fl X , Fl Fl blacklist
 is ignored if
-.Fl W, Fl Fl whitelist
+.Fl W , Fl Fl whitelist
 is set.
-.It Fl X, Fl Fl blacklist Ar address Ns Op Ar /cidr
+.It Fl X , Fl Fl blacklist Ar address Ns Op Ar /cidr
 Ignore all packets from
 .Ar address Ns Op Ar /cidr .
 .It Fl Z , Fl Fl denyinterfaces Ar pattern
@@ -774,6 +771,7 @@ If you always use the same options, put them here.
 .It Pa @SCRIPT@
 Bourne shell script that is run to configure or de-configure an interface.
 .It Pa @LIBDIR@/dhcpcd/dev
+Linux
 .Pa /dev
 management modules.
 .It Pa @HOOKDIR@
@@ -788,11 +786,11 @@ Text file that holds a secret key known only to the host.
 .It Pa @DBDIR@/ Ns Ar interface Ns Ar -ssid Ns .lease
 The actual DHCP message sent by the server.
 We use this when reading the last
-lease and use the files mtime as when it was issued.
+lease and use the file's mtime as when it was issued.
 .It Pa @DBDIR@/ Ns Ar interface Ns Ar -ssid Ns .lease6
 The actual DHCPv6 message sent by the server.
 We use this when reading the last
-lease and use the files mtime as when it was issued.
+lease and use the file's mtime as when it was issued.
 .It Pa @DBDIR@/rdm_monotonic
 Stores the monotonic counter used in the
 .Ar replay
@@ -821,7 +819,7 @@ Control socket to per interface daemon.
 .Xr dhcpcd-run-hooks 8 ,
 .Xr resolvconf 8
 .Sh STANDARDS
-RFC\ 951, RFC\ 1534, RFC\ 2104, RFC\ 2131, RFC\ 2132, RFC\ 2563, RFC\ 2855, 
+RFC\ 951, RFC\ 1534, RFC\ 2104, RFC\ 2131, RFC\ 2132, RFC\ 2563, RFC\ 2855,
 RFC\ 3004, RFC\ 3118, RFC\ 3203, RFC\ 3315, RFC\ 3361, RFC\ 3633, RFC\ 3396,
 RFC\ 3397, RFC\ 3442, RFC\ 3495, RFC\ 3925, RFC\ 3927, RFC\ 4039, RFC\ 4075,
 RFC\ 4242, RFC\ 4361, RFC\ 4390, RFC\ 4702, RFC\ 4074, RFC\ 4861, RFC\ 4833,
