resolvconf: We need the onestatus argument
As status suffers the same flaw as FreeBSD.
Namely it returns 0 if not running AND not enabled.

--- a/sbin/resolvconf/Makefile
+++ b/sbin/resolvconf/Makefile
@@ -18,7 +18,7 @@ ${f}: ${f}.in
 		-e 's:@LIBEXECDIR@:${FILESDIR}:g' \
 		-e 's:@VARDIR@:/var/run/resolvconf:g' \
 		-e 's:@RESTARTCMD@::g' \
-		-e 's:@STATUSARG@::g' \
+		-e 's:@STATUSARG@:onestatus:g' \
 		${DISTDIR}/$@.in > $@
 .endfor
 
