--- a/lib/libc/stdlib/Makefile.inc
+++ b/lib/libc/stdlib/Makefile.inc
@@ -16,7 +16,7 @@ MISRCS+=a64l.c abort.c abs.c atexit.c \
 	merge.c posix_fadvise.c ptsname.c qsort.c qsort_r.c quick_exit.c \
 	radixsort.c rand.c random.c \
 	reallocarray.c reallocf.c realpath.c recallocarray.c remque.c \
-	strfmon.c strsuftoll.c strtoimax.c \
+	set_constraint_handler_s.c strfmon.c strsuftoll.c strtoimax.c \
 	strtol.c strtoll.c strtonum.c strtoq.c strtoul.c strtoull.c \
 	strtoumax.c strtouq.c system.c tdelete.c tfind.c tsearch.c twalk.c
 
@@ -45,7 +45,8 @@ MAN+=	a64l.3 abort.3 abs.3 alloca.3 atexit.3 atof.3 atoi.3 atol.3 \
 	posix_fadvise.3 posix_memalign.3 posix_openpt.3 ptsname.3 \
 	qsort.3 quick_exit.3 \
 	radixsort.3 rand.3 random.3 realpath.3 reallocarray.3 \
-	strfmon.3 strsuftoll.3 strtod.3 strtol.3 strtonum.3 strtoul.3 system.3 \
+	set_constraint_handler_s.3 strfmon.3 strsuftoll.3 strtod.3 \
+	strtol.3 strtonum.3 strtoul.3 system.3 \
 	tsearch.3
 
 MLINKS+=a64l.3 l64a.3 \
@@ -84,6 +85,8 @@ MLINKS+=random.3 initstate.3 \
 	random.3 setstate.3 \
 	random.3 srandom.3 \
 	random.3 srandomdev.3
+MLINKS+=set_constraint_handler_s.3 abort_handler_s.3 \
+	set_constraint_handler_s.3 ignore_handler_s.3
 MLINKS+=strfmon.3 strfmon_l.3
 MLINKS+=strsuftoll.3 strsuftollx.3
 MLINKS+=strtod.3 strtod_l.3 \
