telnetd(8): Switch to utmpx. Drop utmp support.

--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -11,8 +11,7 @@ SRCS=		authenc.c global.c slc.c state.c sys_term.c telnetd.c \
 
 WARNS?=		2
 
-CFLAGS+=	-DLINEMODE -DUSE_TERMIO -DDIAGNOSTICS
-CFLAGS+=	-DOLD_ENVIRON -DENV_HACK -DSUPPORT_UTMP -DSUPPORT_UTMPX
+CFLAGS+=	-DLINEMODE -DUSE_TERMIO -DDIAGNOSTICS -DOLD_ENVIRON -DENV_HACK
 CFLAGS+=	-I${.CURDIR}/../../lib
 
 .if !defined(NO_INET6)
