who(1)/finger(1): Move to utmpx. Drop utmp support.
finger(1) utmpx support taken from FreeBSD.

This also moves the consumers of utmpentry.c to utmpx: talkd(8),
systat(1), users(1), wall(1) and write(1).

--- a/usr.bin/finger/Makefile
+++ b/usr.bin/finger/Makefile
@@ -10,6 +10,6 @@ MAN=	finger.1 finger.conf.5
 DPADD+=	${LIBUTIL}
 LDADD+=	-lutil
 
-CFLAGS+= -I${.CURDIR}/../who -DSUPPORT_UTMP -DSUPPORT_UTMPX
+CFLAGS+= -I${.CURDIR}/../who
 
 .include <bsd.prog.mk>
