Remove the legacy "utmp" API, now that our utils have been moved to utmpx.
As I wrote in UPGRADING, the main change for "normal" users is probably
that /var/log/wtmp is no longer logged to, just /var/log/wtmpx.

Leave the old API in libc as compat symbols that do nothing and always
succeed for the run-time linker (i.e. old binaries still using them).

dports has been kindly adjusted by zrj and new binary packages for master
are on their way.

A future commit will provide a wtmpcvt(1) utility to convert old wtmp
files to the wtmpx format.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3756,6 +3756,15 @@ TO_REMOVE+=/usr/sbin/rdate
 TO_REMOVE+=/usr/share/man/man8/rdate.8.gz
 TO_REMOVE+=/entropy
 TO_REMOVE+=/usr/share/man/man9/kmalloc_cachealign.9.gz
+TO_REMOVE+=/usr/include/utmp.h
+TO_REMOVE+=/usr/share/man/man3/getutmp.3.gz
+TO_REMOVE+=/usr/share/man/man3/getutmpx.3.gz
+TO_REMOVE+=/usr/share/man/man3/login.3.gz
+TO_REMOVE+=/usr/share/man/man3/logout.3.gz
+TO_REMOVE+=/usr/share/man/man3/logwtmp.3.gz
+TO_REMOVE+=/usr/share/man/man5/lastlog.5.gz
+TO_REMOVE+=/usr/share/man/man5/utmp.5.gz
+TO_REMOVE+=/usr/share/man/man5/wtmp.5.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
