libc: Add global __LIBC definition while building libc.
 It will be used to limit visibility for uses outside libc context.
 No functional change yet.

In-discussion-with: swilder

--- a/lib/libc/Makefile
+++ b/lib/libc/Makefile
@@ -6,6 +6,7 @@ SHLIB_MAJOR= 8
 SHLIBDIR?= /lib
 CFLAGS+= -I${.CURDIR}/include -I${.OBJDIR} -I${.CURDIR}/${MACHINE_ARCH}
 CFLAGS+= -DNLS
+CFLAGS+= -D__LIBC
 CLEANFILES+=tags
 PRECIOUSLIB=	yes
 
