Adjust numerous manual pages, scripts and Makefiles for the utmp removal.
Also remove /var/run/utmp and /var/log/lastlog via 'make upgrade'. Keep
any /var/log/wtmp and /var/log/wtmp.* files in case the user wants to
convert them with wtmpcvt(1).

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3766,6 +3766,8 @@ TO_REMOVE+=/usr/share/man/man5/lastlog.5.gz
 TO_REMOVE+=/usr/share/man/man5/utmp.5.gz
 TO_REMOVE+=/usr/share/man/man5/wtmp.5.gz
 TO_REMOVE+=/usr/share/man/man3/ttyslot.3.gz
+TO_REMOVE+=/var/log/lastlog
+TO_REMOVE+=/var/run/utmp
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
