sbin/newfs_hammer2: Use sbin/hammer2/subs.c
This is same as how sbin/newfs_hammer makes use of common code
in sbin/hammer.

--- a/sbin/newfs_hammer2/Makefile
+++ b/sbin/newfs_hammer2/Makefile
@@ -2,10 +2,13 @@ PROG=	newfs_hammer2
 SRCS=	newfs_hammer2.c
 MAN=	newfs_hammer2.8
 
-CFLAGS+= -I${.CURDIR}/../../sys
+CFLAGS+= -I${.CURDIR}/../../sys -I${.CURDIR}/../hammer2
 CFLAGS+= -DXXH_NAMESPACE=h2_
+CFLAGS+= ${PRIVATELIB_CFLAGS} # XXX <openssl/*.h> via <dmsg.h>
 
 .PATH: ${.CURDIR}/../../sys/libkern ${.CURDIR}/../../sys/vfs/hammer2/xxhash
 SRCS+= icrc32.c xxhash.c
+.PATH: ${.CURDIR}/../hammer2
+SRCS+= subs.c
 
 .include <bsd.prog.mk>
