--- a/sbin/fsck_msdosfs/Makefile
+++ b/sbin/fsck_msdosfs/Makefile
@@ -1,6 +1,4 @@
-#	$NetBSD: Makefile,v 1.6 1997/05/08 21:11:11 gwr Exp $
-# $FreeBSD: src/sbin/fsck_msdosfs/Makefile,v 1.2.2.1 2001/08/01 05:47:55 obrien Exp $
-# $DragonFly: src/sbin/fsck_msdosfs/Makefile,v 1.3 2006/10/17 00:55:40 pavalos Exp $
+# $FreeBSD$
 
 FSCK=	${.CURDIR}/../fsck
 .PATH: ${FSCK}
