libc/string: Add memset_s(3).
Taken-from: FreeBSD

--- a/lib/libc/string/Makefile.inc
+++ b/lib/libc/string/Makefile.inc
@@ -11,7 +11,7 @@ CFLAGS+= -I${.CURDIR}/../libc/locale
 MISRCS+=bcmp.c bcopy.c bzero.c explicit_bzero.c \
 	ffs.c ffsl.c ffsll.c fls.c flsl.c flsll.c \
 	index.c memccpy.c memchr.c memrchr.c memcmp.c \
-	memcpy.c memmem.c memmove.c mempcpy.c memset.c rindex.c \
+	memcpy.c memmem.c memmove.c mempcpy.c memset.c memset_s.c rindex.c \
 	stpcpy.c stpncpy.c strcasecmp.c \
 	strcat.c strcasestr.c strchr.c strchrnul.c strcmp.c strcoll.c strcpy.c\
 	strcspn.c strdup.c strerror.c strlcat.c strlcpy.c strlen.c strmode.c \
@@ -49,6 +49,7 @@ MLINKS+=index.3 rindex.3
 MLINKS+=memchr.3 memrchr.3
 MLINKS+=memcmp.3 bcmp.3
 MLINKS+=memcpy.3 mempcpy.3
+MLINKS+=memset.3 memset_s.3
 MLINKS+=strcasecmp.3 strcasecmp_l.3 \
 	strcasecmp.3 strncasecmp.3 \
 	strcasecmp.3 strncasecmp_l.3
