mtree: Fix installworld

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -158,6 +158,8 @@
                 ..
             ..
         ..
+        dsynth
+        ..
         examples
             acpica
             ..
