dsynth(1): Fix 'make install' with $DESTDIR set.
Now that the creation of /usr/share/dsynth is in the mtree file
(see 652cecd95046a092589807c7eea9799b71530ca4) and given that dsynth
is hooked into the build too, we could remove the beforeinstall
target, but it might still be useful for people running release,
for example. So keep it instead and fix it for when $DESTDIR is set.

--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -22,6 +22,6 @@ LDADD+=		-lprivate_ncurses
 LDADD+=		-lm
 
 beforeinstall:
-	mkdir -p ${SCRIPTSDIR}
+	mkdir -p ${DESTDIR}${SCRIPTSDIR}
 
 .include <bsd.prog.mk>
