lib/libdmsg: Use libkern instead of lib/libdmsg/icrc.c
Remove yet another copy of icrc file in lib/libdmsg, with only
difference in function names which start with dmsg_ prefix.

--- a/lib/libdmsg/Makefile
+++ b/lib/libdmsg/Makefile
@@ -1,11 +1,14 @@
 # libdmsg - hammer2 network cluster messaging library
 #
 LIB=	dmsg
-SRCS+=	icrc.c debug.c subs.c crypto.c msg.c msg_lnk.c service.c
+SRCS+=	debug.c subs.c crypto.c msg.c msg_lnk.c service.c
 
 CFLAGS+=	-pthread
 CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 
 INCS=	dmsg.h
+
+.PATH: ${.CURDIR}/../../sys/libkern
+SRCS+= icrc32.c
 
 .include <bsd.lib.mk>
