rc: Rename jail's rc default variables
- Also add the remaining sysctls that were not handled. Here's
  the current list:

      jail_default_set_hostname_allow       (default: enabled)
      jail_default_socket_unixiproute_only  (default: enabled)
      jail_default_sysvipc_allow            (default: disabled)
      jail_default_chflags_allow            (default: disabled)
      jail_default_raw_sockets_allow        (default: disabled)

- You can override the default by editing rc.conf(5) as usual, please
  make sure you adjust these variables if you're using them.

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -394,9 +394,11 @@ watchdogd_enable="NO"	# Start the software watchdog daemon
 
 jail_enable="NO"	# Set to NO to disable starting of any jails
 jail_list=""		# Space separated list of names of jails
-jail_set_hostname_allow="YES" # Allow root user in a jail to change its hostname
-jail_socket_unixiproute_only="YES" # Route only TCP/IP within a jail
-jail_sysvipc_allow="NO"	# Allow SystemV IPC use from within a jail
+jail_default_set_hostname_allow="YES"      # Allow root user in a jail to change its hostname
+jail_default_socket_unixiproute_only="YES" # Route only TCP/IP within a jail
+jail_default_sysvipc_allow="NO"	           # Allow SystemV IPC use from within a jail
+jail_default_chflags_allow="NO"	           # Allow altering system files within a jail
+jail_default_raw_sockets_allow="NO"	   # Allow raw sockets within a jail
 
 #
 # To use rc's built-in jail infrastructure create entries for
