--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3776,6 +3776,9 @@ TO_REMOVE+=/usr/share/mk/bsd.cpu.clang.mk
 TO_REMOVE+=/usr/lib/security/pam_ssh.so
 TO_REMOVE+=/usr/lib/security/pam_ssh.so.2
 TO_REMOVE+=/usr/share/man/man8/pam_ssh.8.gz
+TO_REMOVE+=/usr/lib/security/pam_tacplus.so
+TO_REMOVE+=/usr/lib/security/pam_tacplus.so.2
+TO_REMOVE+=/usr/share/man/man8/pam_tacplus.8.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
