Nuke pam_radius(8).
 It was moved to DPorts.

 While there, remove deps from MINUSPAM (including last dep on crypto).

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3779,6 +3779,9 @@ TO_REMOVE+=/usr/share/man/man8/pam_ssh.8.gz
 TO_REMOVE+=/usr/lib/security/pam_tacplus.so
 TO_REMOVE+=/usr/lib/security/pam_tacplus.so.2
 TO_REMOVE+=/usr/share/man/man8/pam_tacplus.8.gz
+TO_REMOVE+=/usr/lib/security/pam_radius.so
+TO_REMOVE+=/usr/lib/security/pam_radius.so.2
+TO_REMOVE+=/usr/share/man/man8/pam_radius.8.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
