--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3782,6 +3782,34 @@ TO_REMOVE+=/usr/share/man/man8/pam_tacplus.8.gz
 TO_REMOVE+=/usr/lib/security/pam_radius.so
 TO_REMOVE+=/usr/lib/security/pam_radius.so.2
 TO_REMOVE+=/usr/share/man/man8/pam_radius.8.gz
+TO_REMOVE+=/usr/include/taclib.h
+TO_REMOVE+=/usr/lib/libtacplus.a
+TO_REMOVE+=/usr/lib/libtacplus.so
+TO_REMOVE+=/usr/lib/libtacplus.so.2
+TO_REMOVE+=/usr/lib/profile/libtacplus.a
+TO_REMOVE+=/usr/share/man/man3/libtacplus.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_add_server.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_clear_avs.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_close.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_config.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_create_authen.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_create_author.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_get_av.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_get_av_value.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_get_data.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_get_msg.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_open.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_send_authen.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_send_author.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_av.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_data.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_msg.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_port.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_priv.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_rem_addr.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_set_user.3.gz
+TO_REMOVE+=/usr/share/man/man3/tac_strerror.3.gz
+TO_REMOVE+=/usr/share/man/man5/tacplus.conf.5.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
