--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3810,6 +3810,48 @@ TO_REMOVE+=/usr/share/man/man3/tac_set_rem_addr.3.gz
 TO_REMOVE+=/usr/share/man/man3/tac_set_user.3.gz
 TO_REMOVE+=/usr/share/man/man3/tac_strerror.3.gz
 TO_REMOVE+=/usr/share/man/man5/tacplus.conf.5.gz
+TO_REMOVE+=/usr/include/radlib.h
+TO_REMOVE+=/usr/include/radlib_vs.h
+TO_REMOVE+=/usr/lib/libradius.a
+TO_REMOVE+=/usr/lib/libradius.so
+TO_REMOVE+=/usr/lib/libradius.so.3
+TO_REMOVE+=/usr/lib/profile/libradius.a
+TO_REMOVE+=/usr/share/man/man3/libradius.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_acct_open.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_add_server.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_add_server_ex.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_auth_open.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_bind_to.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_close.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_config.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_continue_send_request.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_create_request.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_create_response.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_cvt_addr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_cvt_int.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_cvt_string.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_demangle.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_demangle_mppe_key.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_get_attr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_get_vendor_attr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_init_send_request.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_addr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_attr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_int.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_message_authentic.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_string.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_vendor_addr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_vendor_attr.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_vendor_int.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_put_vendor_string.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_receive_request.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_request_authenticator.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_send_request.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_send_response.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_server_open.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_server_secret.3.gz
+TO_REMOVE+=/usr/share/man/man3/rad_strerror.3.gz
+TO_REMOVE+=/usr/share/man/man5/radius.conf.5.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
