libc: Add __errno_location() for language binding benefits.
 Some languages have restrictions when it comes to C style TLS handling
 (thread local might be feature-gated) or simply it is inconvenient to
 add various OS specific binding wrappers just to access C errno values.

 The __errno_location() symbol provides externally callable version of
 __error() inline function.

 While there, add __WANT_NO_INLINED___ERROR guard for few python parsers
 in DPorts that are unable to parse inlined __error() code yet.

--- a/lib/libc/gen/Makefile.inc
+++ b/lib/libc/gen/Makefile.inc
@@ -8,8 +8,9 @@ CFLAGS+=-I${.CURDIR}/../libc/sysvipc
 
 CMAPS+=	${.CURDIR}/gen/Symbol.map
 
-SRCS+=  _once_stub.c _pthread_stubs.c _rand48.c _spinlock_stub.c \
-	_thread_init.c alarm.c arc4random.c assert.c basename.c \
+SRCS+=  __errno_location.c _once_stub.c _pthread_stubs.c _rand48.c \
+	_spinlock_stub.c _thread_init.c \
+	alarm.c arc4random.c assert.c basename.c \
 	clock.c clock_getcpuclockid.c closedir.c confstr.c creat.c \
 	ctermid.c daemon.c devname.c dirfd.c dirname.c disklabel.c disktab.c \
 	dlfcn.c drand48.c dup3.c elf_utils.c erand48.c err.c errlst.c exec.c \
