Fix immutable flag handling in our mtree(8) invocations.
All of this only affects /var/empty so far.

* If NOSCHG isn't set (which is the default), pass -i to mtree(8) when
  installing the system or building an installer img.

* Pass -i always when we install a system from the installer. This
  installer usage of mtree(8) should not be needed. Expand the comment
  a bit.

Reported-by: zrj

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -46,6 +46,9 @@ DEFAULTS= compilers.conf devfs.conf make.conf periodic.conf \
 	  pfi.conf rc.conf uuids
 
 MTREE=	BSD.include.dist BSD.root.dist BSD.usr.dist BSD.var.dist
+.if !defined(NOFSCHG)
+MTREE_FSCHG=	-i
+.endif
 
 PPPCNF=	ppp.conf
 
@@ -356,10 +359,13 @@ distribution:
 #
 #
 distrib-dirs:
-	mtree -deU -f ${.CURDIR}/mtree/BSD.root.dist -p ${DESTDIR}/
-	mtree -deU -f ${.CURDIR}/mtree/BSD.var.dist -p ${DESTDIR}/var
-	mtree -deU -f ${.CURDIR}/mtree/BSD.usr.dist -p ${DESTDIR}/usr
-	mtree -deU -f ${.CURDIR}/mtree/BSD.include.dist \
+	mtree ${MTREE_FSCHG} -deU -f ${.CURDIR}/mtree/BSD.root.dist \
+		-p ${DESTDIR}/
+	mtree ${MTREE_FSCHG} -deU -f ${.CURDIR}/mtree/BSD.var.dist \
+		-p ${DESTDIR}/var
+	mtree ${MTREE_FSCHG} -deU -f ${.CURDIR}/mtree/BSD.usr.dist \
+		-p ${DESTDIR}/usr
+	mtree ${MTREE_FSCHG} -deU -f ${.CURDIR}/mtree/BSD.include.dist \
 		-p ${DESTDIR}/usr/include
 	-chflags xlink ${DESTDIR}/* ${DESTDIR}/usr/* ${DESTDIR}/var/* \
 			${DESTDIR}/home/*
