{i915,radeon}kms.4: Really clean up the manual page naming situation.
Leave only i915.4 and radeon.4. The previous naming was a leftover from
when the modules were renamed but the manpage were not taken care of.

Remove *kms.4 and *drm.4 copies.

--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -110,7 +110,7 @@ MAN=	aac.4 \
 	hptiop.4 \
 	hptmv.4 \
 	hptrr.4 \
-	i915kms.4 \
+	i915.4 \
 	ichiic.4 \
 	ichsmb.4 \
 	ichwd.4 \
@@ -249,7 +249,7 @@ MAN=	aac.4 \
 	pt.4 \
 	pty.4 \
 	puc.4 \
-	radeonkms.4 \
+	radeon.4 \
 	ral.4 \
 	random.4 \
 	rdrand.4 \
@@ -447,8 +447,6 @@ MLINKS+=fwe.4 if_fwe.4
 MLINKS+=fxp.4 if_fxp.4
 MLINKS+=gif.4 if_gif.4
 MLINKS+=gre.4 if_gre.4
-MLINKS+=i915kms.4 i915.4 \
-	i915kms.4 i915drm.4
 MLINKS+=ichiic.4 ig4.4
 MLINKS+=igb.4 if_igb.4
 MLINKS+=iicbus.4 ic.4 \
@@ -490,8 +488,6 @@ MLINKS+=oce.4 if_oce.4
 MLINKS+=pccbb.4 cbb.4
 MLINKS+=pcm.4 sound.4
 MLINKS+=pcn.4 if_pcn.4
-MLINKS+=radeonkms.4 radeon.4 \
-	radeonkms.4 radeondrm.4
 MLINKS+=ral.4 if_ral.4
 MLINKS+=random.4 urandom.4
 MLINKS+=re.4 if_re.4
