libusb/libz: Install *.pc files (for dports) using FILES and FILESDIR.

--- a/lib/libz/Makefile
+++ b/lib/libz/Makefile
@@ -21,9 +21,7 @@ INCS=		zconf.h zlib.h
 
 VERSION_DEF=	${.CURDIR}/Versions.def
 SYMBOL_MAPS=	${.CURDIR}/Symbol.map
-
-beforeinstall:
-	${INSTALL} -C -o ${LIBOWN} -g ${LIBGRP} -m ${LIBMODE} \
-		${.CURDIR}/zlib.pc ${DESTDIR}${LIBDATADIR}/pkgconfig
+FILES=		zlib.pc
+FILESDIR=	${LIBDATADIR}/pkgconfig
 
 .include <bsd.lib.mk>
