libz/savecore: Move the local zopen() from libz to savecore(8).
It is its only consumer.

Cleanup libz's Versions.def and Symbol.map too. Nothing in dports
should be using that function from the library (else it's a bug).

While here, add a __DECONST() to fix for WARNS=6.

Discussed-with: zrj

--- a/lib/libz/Makefile
+++ b/lib/libz/Makefile
@@ -13,7 +13,7 @@ CONTRIBDIR=	${.CURDIR}/../../contrib/zlib-1.2
 
 SRCS=	adler32.c compress.c crc32.c deflate.c gzclose.c gzlib.c gzread.c
 SRCS+=	gzwrite.c infback.c
-SRCS+=	inffast.c inflate.c inftrees.c trees.c uncompr.c zopen.c zutil.c
+SRCS+=	inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c
 
 CFLAGS+= -I${CONTRIBDIR} -I${.CURDIR}
 
