--- a/sbin/savecore/Makefile
+++ b/sbin/savecore/Makefile
@@ -2,6 +2,7 @@
 # $FreeBSD: src/sbin/savecore/Makefile,v 1.3.8.3 2001/10/01 03:56:41 kris Exp $
 
 PROG=	savecore
+SRCS=	savecore.c zopen.c
 MAN=	savecore.8
 
 DPADD+=	${LIBZ}
