nrelease: Fix 'make restartpkgs'
'make restartpkgs' is broken because 'make install' would fail if the
port is alreay installed.  Fix this issue by executing 'make deinstall'
first, which would exit cleanly even if the port is not installed yet.

--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -248,6 +248,9 @@ pkgs:
 	    || mount_null ${ISODIR}/distfiles ${ISOROOT}/usr/distfiles
 
 .for PKG in ${DPORTS_PACKAGES}
+.if make(restartpkgs)
+	${CHROOT_CMD} "cd /usr/dports/${PKG} && make ${DPORTS_OPTIONS} deinstall"
+.endif
 	${CHROOT_CMD} "cd /usr/dports/${PKG} && make ${DPORTS_OPTIONS} install"
 .endfor
 .for PKG in ${DPORTS_PACKAGES}
