calendar(1): Significant update to calendars from OpenBSD
* The calendars were obtained from OpenBSD as of 2019-02-19
* Generally, OpenBSD has more entries and more accurate, but FreeBSD has
  also updated some entries and fixed some mistakes.
* I cross-checked most mismatching entries by searching the Internet and
  also fixed several mistakes.
* NOTE: there can certainly exist quite some mistakes because I cannot
  thoroughly check all of them.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3870,6 +3870,7 @@ TO_REMOVE+=/usr/share/calendar/pt_BR.ISO8859-1
 TO_REMOVE+=/usr/share/calendar/ru_RU.KOI8-R
 TO_REMOVE+=/usr/share/calendar/uk_UA.KOI8-U
 TO_REMOVE+=/usr/share/calendar/fr_FR.UTF-8/calendar.french
+TO_REMOVE+=/usr/share/calendar/calendar.lotr
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
