Remove checknr(1) which stopped being useful a long time ago.
It reports a ton of errors on pretty much any manual page, regardless
of macro dialect.

mandoc(1) (and groff) have much better checking capabilities.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3856,6 +3856,8 @@ TO_REMOVE+=/usr/share/man/man4/i915drm.4.gz
 TO_REMOVE+=/usr/share/man/man4/i915kms.4.gz
 TO_REMOVE+=/usr/share/man/man4/radeondrm.4.gz
 TO_REMOVE+=/usr/share/man/man4/radeonkms.4.gz
+TO_REMOVE+=/usr/bin/checknr
+TO_REMOVE+=/usr/share/man/man1/checknr.1.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
