--- a/usr.bin/crunch/examples/really-big.conf
+++ b/usr.bin/crunch/examples/really-big.conf
@@ -38,7 +38,7 @@ ln restore rrestore
 
 srcdirs /usr/src/usr.bin
 
-progs apropos ar asa at basename biff cal calendar cap_mkdb checknr chpass
+progs apropos ar asa at basename biff cal calendar cap_mkdb chpass
 progs cksum cmp col colcrt colrm column comm compress crontab ctags cut
 progs dirname du env error expand false file find finger fmt fold fpr from
 progs fsplit fstat ftp getconf getopt gprof head hexdump id indent ipcrm
