--- a/lib/libc/upmap/Makefile.inc
+++ b/lib/libc/upmap/Makefile.inc
@@ -7,4 +7,6 @@ CFLAGS+=-I${.CURDIR}/../libc/sysvipc
 
 CMAPS+=	${.CURDIR}/upmap/Symbol.map
 
-SRCS+=	upmap.c ukp_clock.c ukp_getpid.c ukp_setproctitle.c ukp_gettimeofday.c
+SRCS+=	upmap.c
+SRCS+=	ukp_clock.c ukp_getpid.c ukp_setproctitle.c
+SRCS+=	ukp_gettimeofday.c ukp_blocksigs.c
